crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_directive_inside_unsafe.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED rejects_directive_inside_unsafe
  spec directives inside unsafe blocks are unsupported
  src/main.rs:7:1: 7:24

stderr:
