crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_drop_struct_initial_state.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED rejects_drop_struct_initial_state
  structs with Drop are unsupported: Droppy
  src/main.rs:9:1: 9:52
PASS main
  all assertions discharged

stderr:
