crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_duplicate_own_i32_resource.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 116
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL rejects_duplicate_own_i32_resource
  raw assertion failed
  src/main.rs:15:2: 15:2
PASS main
  all assertions discharged

stderr:
