crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_duplicate_spec_var_binding.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED rejects_duplicate_spec_var_binding
  duplicate spec binding `?X` in //@ assert
  src/main.rs:6:5: 6:16

stderr:
