crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_duplicate_standalone_function_contract.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED declared_twice
  function contract is declared both on the function body and in a standalone contract declaration
  src/main.rs:8:1: 13:2

stderr:
