crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_ens_spec_var_use_in_body.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED rejects_ens_spec_var_use_in_body
  unresolved binding `X` in //@ assert
  src/main.rs:6:5: 6:17

stderr:
