crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_equal_results_from_distinct_contract_binders.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL rejects_equal_results_from_distinct_contract_binders
  assertion failed
  src/main.rs:11:5: 11:32

stderr:
