crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_explicit_result_binder_in_ens.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED id
  expected a //@ ens predicate
  src/main.rs:1:1: 6:2

stderr:
