crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_forward_reference_to_later_binder.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED rejects_forward_reference_to_later_binder
  expected a //@ assert predicate
  src/main.rs:3:2: 3:2

stderr:
