crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_general_binder_in_ens.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED rejects_general_binder_in_ens
  new spec bindings are not allowed in //@ ens
  src/main.rs:3:1: 3:21

stderr:
