crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_integer_raw_pointer_read.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL rejects_integer_raw_pointer_read
  raw pointer dereference requires an initialized PointsTo resource
  src/main.rs:5:18: 5:20
PASS main
  all assertions discharged

stderr:
